# M5Cardputer-UserDemo

./: .gitignore  .gitmodules  AGENTS.md  README.md  partitions.csv  sdkconfig.defaults
docs/: homepod-native-control-research.md
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/apps/: apps.h
main/apps/app_external_input_test/: app_external_input_test.cpp  app_external_input_test.h
main/apps/app_home_control/: app_home_control.cpp  app_home_control.h  home_assistant_client.cpp  home_assistant_client.h
main/apps/app_home_control/assets/: macctl_big.h  macctl_small.h
main/apps/app_keyboard/: select_menu.cpp
main/apps/app_launcher/: app_launcher.cpp  app_launcher.h
main/apps/app_launcher/view/boot_anim/: boot_anim.cpp
main/apps/app_launcher/view/keyboard_bar/: keyboard_bar.cpp
main/apps/app_launcher/view/menu/: menu.cpp
main/apps/app_launcher/view/system_bar/: system_bar.cpp
main/apps/app_pokemon_yellow/: app_pokemon_yellow.cpp  app_pokemon_yellow.h
main/apps/app_pokemon_yellow/assets/: gameboy_big.h  gameboy_small.h
main/apps/app_pokemon_yellow/emu/gearboy/: Audio.cpp  Cartridge.cpp  Cartridge.h  GearboyCore.cpp  GearboyCore.h  Video.cpp  Video.h  definitions.h  gearboy.h  log.h
main/apps/app_pokemon_yellow/emu/gnuboy/: gnuboy.c  gnuboy.h  hw.c  hw.h  lcd.c
main/apps/app_pokemon_yellow/emu/minigb_apu/: minigb_apu.c
main/apps/app_sdcard/: app_sdcard.cpp  app_sdcard.h
main/apps/utils/: common.h
main/apps/utils/audio/: audio.cpp  audio.h
main/hal/: external_input.cpp  external_input.h  hal.cpp  hal.h
main/hal/keyboard/: keyboard.cpp  keyboard.h
main/hal/utils/ble_hid_device/: ble_hid_device_helper.c  ble_hid_device_helper.h  ble_hid_gap.c  ble_hid_report_queue_policy.h
main/hal/utils/ir_nec/: ir_helper.c  ir_helper.h
main/hal/utils/settings/: settings.cc
main/system/: gameboy_boot_mode.cpp  gameboy_boot_mode.h
tools/: flash-firmware.sh
tools/macctl-helper/: Package.swift  build-app.sh  install.sh
tools/macctl-helper/AudioDriver/: CMakeLists.txt  README.md  build-driver.sh  install-driver.sh
tools/macctl-helper/AudioDriver/Resources/: Info.plist.in
tools/macctl-helper/AudioDriver/Sources/: Driver.cpp
tools/macctl-helper/Sources/MacCtlCore/: AppleTVNativeClient.swift  HomeAssistantClient.swift  MacCtlCommand.swift
tools/macctl-helper/Sources/MacCtlHelper/: ADVCtlApp.swift  ADVCtlAudioRingSink.swift  Info.plist  JoystickSettings.swift  WaveformView.swift  main.swift
tools/macctl-helper/Sources/MacCtlHelper/Resources/: advctl_pyatv_bridge.py
tools/macctl-helper/Tests/MacCtlCoreTests/: AppleTVNativeClientTests.swift  MacCtlCommandTests.swift
tools/tests/: advctl_voice_e2e.py  test_advctl_input_audio_priority.py  test_advctl_xiaomi_ir_dashboard.py  test_keyboard_fn_function_keys.py
