cmake_minimum_required(VERSION 3.20)

project(ADVCtlAudio CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(DRIVER_NAME ADVCtlAudio)
set(DRIVER_VERSION 0.2.0)
set(DRIVER_IDENTIFIER com.advctl.audio.driver)
set(DRIVER_ENTRYPOINT ADVCtlAudio_Create)

get_filename_component(REPO_ROOT "${CMAKE_CURRENT_LIST_DIR}/../../.." ABSOLUTE)
set(LIBASPL_SOURCE_DIR "${REPO_ROOT}/third_party/libASPL")

include(ExternalProject)
ExternalProject_Add(ADVCtlAudio_libASPL
  SOURCE_DIR "${LIBASPL_SOURCE_DIR}"
  BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/libASPL-build"
  INSTALL_DIR "${CMAKE_CURRENT_BINARY_DIR}/libASPL-prefix"
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR> -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
  LOG_CONFIGURE YES
  LOG_BUILD YES
  LOG_INSTALL YES
)

add_library(${DRIVER_NAME} MODULE
  Sources/Driver.cpp
)

add_dependencies(${DRIVER_NAME} ADVCtlAudio_libASPL)
target_include_directories(${DRIVER_NAME}
  PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/libASPL-prefix/include"
)
target_link_libraries(${DRIVER_NAME}
  PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/libASPL-prefix/lib/libASPL.a"
)

find_library(LIB_CoreAudio CoreAudio REQUIRED)
find_library(LIB_CoreFoundation CoreFoundation REQUIRED)
target_link_libraries(${DRIVER_NAME}
  PRIVATE ${LIB_CoreAudio} ${LIB_CoreFoundation}
)

set_target_properties(${DRIVER_NAME} PROPERTIES
  OUTPUT_NAME "${DRIVER_NAME}"
  BUNDLE true
  BUNDLE_EXTENSION "driver"
  PREFIX ""
  SUFFIX ""
  MACOSX_BUNDLE ON
  MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Resources/Info.plist.in"
  MACOSX_BUNDLE_BUNDLE_NAME "${DRIVER_NAME}"
  MACOSX_BUNDLE_BUNDLE_VERSION "${DRIVER_VERSION}"
  MACOSX_BUNDLE_COPYRIGHT "Copyright (c) ADVCtl"
  MACOSX_BUNDLE_GUI_IDENTIFIER "${DRIVER_IDENTIFIER}"
  MACOSX_BUNDLE_SHORT_VERSION_STRING "${DRIVER_VERSION}"
)
